fix for bug #376062:  can't connect with the internet on Wista RC1

r=wtc, r=Masatoshi Kimura